<resources>
    <string name="app_name">Moodi</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="excited">Excited</string>
    <string name="anxious">Anxious</string>
    <string name="relaxed">Relaxed</string>
    <string name="hello">How are you feeling today?</string>
    <string name="mood_icon">Mood Icon</string>
    <string name="mood_type">Mood Type</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="note">Note</string>
    <string name="most_frequent_mood">Most Frequent Mood: </string>
    <string name="mood_counts">Mood Counts: </string>
</resources>